; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/alpha/extr_pixblockdsp_alpha.c_get_pixels_mvi.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/alpha/extr_pixblockdsp_alpha.c_get_pixels_mvi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @get_pixels_mvi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_pixels_mvi(i32* noalias %0, i32* noalias %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 8, i32* %7, align 4
  br label %9

9:                                                ; preds = %28, %3
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @ldq(i32* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @unpkbw(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @stq(i32 %13, i32* %14)
  %16 = load i32, i32* %8, align 4
  %17 = ashr i32 %16, 32
  %18 = call i32 @unpkbw(i32 %17)
  %19 = load i32*, i32** %4, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 4
  %21 = call i32 @stq(i32 %18, i32* %20)
  %22 = load i32, i32* %6, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = sext i32 %22 to i64
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  store i32* %25, i32** %5, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 8
  store i32* %27, i32** %4, align 8
  br label %28

28:                                               ; preds = %9
  %29 = load i32, i32* %7, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %9, label %32

32:                                               ; preds = %28
  ret void
}

declare dso_local i32 @ldq(i32*) #1

declare dso_local i32 @stq(i32, i32*) #1

declare dso_local i32 @unpkbw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
